# proof-of-concept

./: .clang-format  .gitignore  CMakeLists.txt  FATSecureErase.sln  README.md
FATSecureErase/: FATSecureErase.vcxproj  FATSecureErase.vcxproj.filters  fat.c  fat.cpp  fat.h  fat.hpp  main.c  main.cpp
src/: CMakeLists.txt  FileAllocationTable.cpp  Helpers.cpp  String.cpp  fat.cpp  fat.hpp  fatfs_file_allocation_table.cpp  fs_errors.hpp  main.cpp  poc.cpp  poc.hpp
src/include/fatfs/: Errors.hpp  FileAllocationTable.hpp  Helpers.hpp  Structures.hpp  errors.hpp  file_allocation_table.hpp
src/include/fatfs/priv/: file_allocation_table__impl.hpp  priv.hpp
src/include/utilities/: String.hpp
src/priv/: FileAllocationTable.impl.cpp  fatfs_priv_file_allocation_table__impl.cpp
src/priv/include/fatfs/: FileAllocationTable.impl.hpp
